# arbitrager

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yaml  post_proof.sh
.github/workflows/: build_and_push.yaml  build_code.yaml
assets/: proof.json
docs/: architecture.md  transactions.md
src/: config.rs  error.rs  main.rs  types.rs
src/aggregator/: mod.rs
src/arbitrager/: mod.rs
src/balance_checker/: mod.rs
src/chains/: chains.rs  mod.rs
src/chains/dummy/: mod.rs
src/chains/evm/: provider.rs  query.rs  sender.rs
src/chains/solana/: provider.rs
src/cmd/: cfg.rs  logger.rs  mod.rs
src/database/: db.rs  mod.rs  schema.json  schema.rs  sql.rs
src/evm/: SP1VerifierPlonk.json  mod.rs  provider.rs  sender.rs
src/json_rpc_server/: mod.rs  server.rs
src/poster/: poster.rs
src/utils/: mod.rs  url.rs
src/verifier/: dummy.rs  mod.rs  risc0.rs  sp1.rs  verifier.rs
